# TiagoBears_grasp

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: grasp_params.yaml  gripper_params_pal-gripper.yaml  gripper_params_robotiq-2f-85.yaml
launch/: grasp_node.launch  load_config.launch
rviz/: grasp.rviz  grasp_pictures.rviz
scripts/: debug_gripper.py  grasp_node.py  test_cubes.py
src/: color_map_class.py  cube_class.py  grasp_class.py
src/TiagoBears_grasp/: color_map_class.py  cube_class.py  grasp_class.py  setup_class.py
srv/: PickPlace.srv
