<?xml version="1.0"?>
<package>
  <name>TiagoBears_grasp</name>
  <version>2.3.1</version>
  <description>TiagoBears_grasp</description>
  <maintainer email="sophie.lueth@stud.tu-darmstadt.de">Sophie</maintainer>
  <author email="sophie.lueth@stud.tu-darmstadt.de">Sophie</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_ros</build_depend>

</package>